unpackaged/main/default/objects/Promo_Mechanic__c/Promo_Mechanic__c.object-meta.xml
<CustomObject>
    <label>Promo Mechanic</label>
    <nameField>
        <label>Promo Mechanic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Mechanic</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>