unpackaged/main/default/objects/Promo_Mechanic__c/fields/Campaign_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Eligibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the related Campaign Eligibility Record</description>
    <inlineHelpText>Denotes the related Campaign Eligibility Record</inlineHelpText>
    <label>Campaign Eligibility</label>
    <referenceTo>Campaign_Eligibility__c</referenceTo>
    <relationshipLabel>Promo Mechanic</relationshipLabel>
    <relationshipName>Promo_Mechanic</relationshipName>
    <type>Lookup</type>
</CustomField>