unpackaged/main/default/objects/Promo_Mechanic__c/fields/Denomination__c.field-meta.xml
<CustomField>
    <fullName>Denomination__c</fullName>
    <description>Denotes denominations of quantity of eligible product</description>
    <inlineHelpText>Denotes denominations of quantity of eligible product</inlineHelpText>
    <label>Denomination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>