unpackaged/main/default/objects/Promo_Mechanic__c/fields/Discount_Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Limit_Type__c</fullName>
    <description>Denotes the limit type of campaign usage</description>
    <inlineHelpText>Denotes the limit type of campaign usage</inlineHelpText>
    <label>Discount Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>perAgent</fullName>
                <label>Per Agent</label>
            </value>
            <value>
                <fullName>perCampaign</fullName>
                <label>Per Campaign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>