unpackaged/main/default/objects/Promo_Mechanic__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>Denotes the discount reason that needs to appear in the line item which are generally used in reports</description>
    <inlineHelpText>Denotes the discount reason that needs to appear in the line item which are generally used in reports</inlineHelpText>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Reasons</valueSetName>
    </valueSet>
</CustomField>