unpackaged/main/default/objects/Promo_Mechanic__c/fields/eCommerceCatalogueProductReference__c.field-meta.xml
<CustomField>
    <fullName>eCommerceCatalogueProductReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eCommerceCatalogueProductReference</label>
    <referenceTo>cspmb__Price_Item__c</referenceTo>
    <relationshipLabel>Promo Mechanic</relationshipLabel>
    <relationshipName>Promo_Mechanic</relationshipName>
    <type>Lookup</type>
</CustomField>