unpackaged/main/default/objects/Promo_Mechanic__c/fields/Eligible_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the product that is selected at the point of sale which is eligible for entitlement promotion</description>
    <inlineHelpText>Denotes the product that is selected at the point of sale which is eligible for entitlement promotion</inlineHelpText>
    <label>Eligible Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promo Mechanic</relationshipLabel>
    <relationshipName>Promo_Mechanic</relationshipName>
    <type>Lookup</type>
</CustomField>