unpackaged/main/default/objects/Promo_Mechanic__c/fields/From_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>From_Product_Code__c</fullName>
    <label>From Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>