unpackaged/main/default/objects/Promo_Mechanic__c/fields/Grab_Voucher_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Grab_Voucher_Entitlement__c</fullName>
    <label>Grab Voucher Entitlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>