unpackaged/main/default/objects/Promo_Mechanic__c/fields/Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Max_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Denotes maximum quantity allowed for eligible product</description>
    <inlineHelpText>Denotes maximum quantity allowed for eligible product</inlineHelpText>
    <label>Max Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>