unpackaged/main/default/objects/Promo_Mechanic__c/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Denotes minimum quantity allowed for eligible product</description>
    <inlineHelpText>Denotes minimum quantity allowed for eligible product</inlineHelpText>
    <label>Min Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>