unpackaged/main/default/objects/Promo_Mechanic__c/fields/Minimum_Spend__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend__c</fullName>
    <description>Decides the minimum spend required for the coupon</description>
    <inlineHelpText>Decides the minimum spend required for the coupon</inlineHelpText>
    <label>Minimum Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>