unpackaged/main/default/objects/Promo_Mechanic__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Denotes the type of opportunity where this promo mechanic should be eligible for. This is used to restrict certain promotions to a specific type of opportunity</description>
    <inlineHelpText>Denotes the type of opportunity where this promo mechanic should be eligible for. This is used to restrict certain promotions to a specific type of opportunity</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C - Standard</fullName>
            </value>
            <value>
                <fullName>B2C - Upgrade</fullName>
            </value>
            <value>
                <fullName>B2C - Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>