unpackaged/main/default/objects/Promo_Mechanic__c/fields/Override_Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Override_Duration_Unit__c</fullName>
    <description>Product selection end date will populate by this field</description>
    <inlineHelpText>Product selection end date will populate by this field</inlineHelpText>
    <label>Override Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>