unpackaged/main/default/objects/Promo_Mechanic__c/fields/Override_Duration_Value__c.field-meta.xml
<CustomField>
    <fullName>Override_Duration_Value__c</fullName>
    <description>Product selection end date will populate by this field</description>
    <inlineHelpText>Product selection end date will populate by this field</inlineHelpText>
    <label>Override Duration Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>