unpackaged/main/default/objects/Promo_Mechanic__c/fields/Override_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_End_Date__c</fullName>
    <description>Stores end date of promo mechanic.</description>
    <inlineHelpText>Represents end date of promo mechanic</inlineHelpText>
    <label>Override End Date</label>
    <type>Date</type>
</CustomField>