unpackaged/main/default/objects/Promo_Mechanic__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <description>Denotes the renewal type when choosing the eligible product. Only valid for Renewal Promotion campaigns</description>
    <inlineHelpText>Denotes the renewal type when choosing the eligible product. Only valid for Renewal Promotion campaigns</inlineHelpText>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>