unpackaged/main/default/objects/Promo_Mechanic__c/fields/Selection_Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Selection_Eligibility_Type__c</fullName>
    <description>Denotes Eligibility type at the point of sale that forms the basis for the promo mechanic and entitlements</description>
    <inlineHelpText>Denotes Eligibility type at the point of sale that forms the basis for the promo mechanic and entitlements</inlineHelpText>
    <label>Selection Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>