unpackaged/main/default/objects/Promo_Mechanic__c/fields/To_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>To_Product_Code__c</fullName>
    <label>To Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>