unpackaged/main/default/objects/Promo_Mechanic__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Denotes the usage type of the promo mechanic - single use or multi-use</description>
    <inlineHelpText>Enter 1 for single use, -1 for infinite use, valid integer for number of times the promo mechanic can be used</inlineHelpText>
    <label>Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>