unpackaged/main/default/objects/Promo_Mechanic__c/validationRules/Cannot_Modify_SS_active_campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_SS_active_campaign</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Campaign_Eligibility__r.Campaign__r.IsActive == true,
Campaign_Eligibility__r.Campaign__r.RecordType.Name=&#39;Self Serve Marketing Promotion&#39;,
!$Permission.System_Admin_Compliance_Access
)</errorConditionFormula>
    <errorMessage>You don&#39;t have Access to update these fields.</errorMessage>
</ValidationRule>