unpackaged/main/default/objects/Promo_Mechanic__c/validationRules/Currency_must_equal_Campaign_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_must_equal_Campaign_Currency</fullName>
    <active>true</active>
    <description>Promo Mechanic Currency should be equal to Campaign currency.</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; 
TEXT(Campaign_Eligibility__r.Campaign__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency should be equal to Campaign currency.</errorMessage>
</ValidationRule>