unpackaged/main/default/objects/Promo_Mechanic__c/validationRules/Eligible_product_should_be_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Eligible_product_should_be_active</fullName>
    <active>true</active>
    <description>Rule used to select only the active product for marketing promo campaigns</description>
    <errorConditionFormula>AND(
 !ISNULL(Eligible_Product__c),
 !Eligible_Product__r.IsActive,
 Campaign_Eligibility__r.Campaign__r.RecordType.DeveloperName = &quot;Marketing_Promo&quot;
)</errorConditionFormula>
    <errorDisplayField>Eligible_Product__c</errorDisplayField>
    <errorMessage>Eligible product should be active.</errorMessage>
</ValidationRule>