unpackaged/main/default/objects/Promo_Mechanic__c/validationRules/Lock_PM_of_Past_Campaigns_For_TM_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_PM_of_Past_Campaigns_For_TM_Users</fullName>
    <active>true</active>
    <description>Restrict Trade Marketing users to update Promo Mechanic of past campaign.</description>
    <errorConditionFormula>AND(
!ISBLANK(Campaign_Eligibility__c),
!ISBLANK(Campaign_Eligibility__r.Campaign__c),
Campaign_Eligibility__r.Campaign__r.Campaign_End_DateTime__c &lt; NOW(),
$Profile.Name = &quot;Trade Marketing&quot; ,
!ISNEW()
)</errorConditionFormula>
    <errorMessage>You cannot perform the operation as campaign of related Campaign Eligibility has passed its end date time.</errorMessage>
</ValidationRule>