unpackaged/main/default/objects/Promo_Mechanic__c/validationRules/Max_and_Min_Qty_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_and_Min_Qty_cannot_be_negative</fullName>
    <active>true</active>
    <description>Max and Min Quantity cannot be negative for Marketing Promo Campaigns.</description>
    <errorConditionFormula>AND(
 Campaign_Eligibility__r.Campaign__r.RecordType.DeveloperName = &quot;Marketing_Promo&quot;,
 OR(
 AND(
  !ISNULL(Max_Qty__c),
  Max_Qty__c &lt; 0
 ),
 AND(
 !ISNULL(Min_Qty__c),
  Min_Qty__c &lt; 0
 )
)
)</errorConditionFormula>
    <errorMessage>Max and Min Quantity cannot be negative.</errorMessage>
</ValidationRule>